--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,8 +4,9 @@ html(lang=sv)
   head
     title Random topic
     link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
-    link(rel='stylesheet', href='//josex2r.github.io/jQuery-SlotMachine/dist/jquery.slotmachine.css')
     link(rel='stylesheet', href='/static/css/main.css')
+    block header
+
   body
     div.container
       block content
